chore: add bill parsing

--- a/shop-advice.gradle
+++ b/shop-advice.gradle
@@ -19,6 +19,11 @@ dependencies {
 
     implementation libs.ben.manes.caffeine
 
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
+
+//    implementation 'org.springframework.ai:spring-ai-openai'
+    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+
     implementation libs.flywaydb.flyway.core
     runtimeOnly libs.postgresql.postgresql
 }
