--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,8 @@
 dependencyResolutionManagement {
     repositories {
         mavenCentral()
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
     }
     versionCatalogs {
         libs {
