--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,14 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://repo.spring.io/milestone' }
         maven { url 'https://repo.spring.io/snapshot' }
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/crashbandicootfm/mediator")
+            credentials {
+                username = "tiltrikt"
+                password = System.getenv("GITHUB_PACKAGES")
+            }
+        }
     }
     versionCatalogs {
         libs {
